fixed merge layout bug

--- a/styles/movie_schedule_styles.css
+++ b/styles/movie_schedule_styles.css
@@ -4,6 +4,7 @@
     height: 644px !important;
     display: flexbox;
     flex-direction: row !important;
+    margin-bottom: 100px;
 }
 
 .mo-calendar-box {
